# rainbow-paktool

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
paklib/: cli.py  pak_compiler.py  pak_decompiler.py
src/paklib/: __init__.py  main.py  paklibtool.py
